prueba con creacion de div en archivo html de directorio public

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,9 @@
 
 <body>
   <div id="main"></div>
+  <div>
+    <img src="../src/assets/images/instagram.png" alt="imagen de instagram">
+  </div>
 </body>
 
 </html>
